--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,4 +7,5 @@
 		<span class="avatar"><img src="{{ "/assets/images/avatar.jpg" | absolute_url }}" alt="" /></span>
 		<h1>{{ site.your-name }}</h1>
 		<p>{{ site.your-title }}</p>
+		<p>{{ site.your-tagline }}</p>
 	</header>
